rabbitmq/rabbitmq-rabbitmq-cluster-operator_NetworkPolicy_rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: rabbitmq-operator
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/part-of: rabbitmq
    app.kubernetes.io/version: 2.8.0
    helm.sh/chart: rabbitmq-cluster-operator-4.2.5
  name: rabbitmq-rabbitmq-cluster-operator
  namespace: rabbitmq
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 9782
  podSelector:
    matchLabels:
      app.kubernetes.io/component: rabbitmq-operator
      app.kubernetes.io/instance: rabbitmq
      app.kubernetes.io/name: rabbitmq-cluster-operator
      app.kubernetes.io/part-of: rabbitmq
  policyTypes:
  - Ingress
  - Egress
